# numc

./: .clang-format  .clang-tidy  .clangd  .geminiignore  .gitignore  .gitmodules  BENCHMARK_REPORT.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OPTIMIZING_LOG.txt  POSTMORTEM.md  README.md  ROADMAP.md  main  main.c  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bench/: CMakeLists.txt  README.md  bench_dot.c  bench_dot_comprehensive.c  bench_elemwise.c  bench_fma.c  bench_matmul.c  bench_numpy.py  bench_pow.c  bench_random.c  bench_reduction.c  bench_scalar.c  bench_unary.c  compare.py  numpy_bench_dot_comprehensive.py  numpy_bench_elemwise.py  numpy_bench_fma.py  numpy_bench_matmul.py  numpy_bench_pow.py  numpy_bench_reduction.py  numpy_bench_unary.py
bench/graph/: README.md  plot.py  requirements.txt
bench/numc/: bench.c  bench_common.h  bench_csv_binary.c  bench_csv_comparison.c  bench_csv_linalg.c  bench_csv_matmul.c  bench_csv_random.c  bench_csv_reduction.c  bench_csv_scalar.c  bench_csv_ternary.c  bench_csv_unary.c  bench_dot.c  bench_dot_comprehensive.c  bench_elemwise.c  bench_fma.c  bench_matmul.c  bench_matmul_csv.c  bench_pow.c  bench_random.c  bench_reduction.c  bench_scalar.c  bench_unary.c  perf_matmul.c
bench/numpy/: bench.py  numpy_bench_dot.py  numpy_bench_elemwise.py  numpy_bench_matmul.py  numpy_bench_pow.py  numpy_bench_random.py  numpy_bench_reduction.py  numpy_bench_scalar.py  numpy_bench_unary.py
benchmark/: array_add.c  bench_add_float.c
build_aarch64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  numc.pc  numcConfig.cmake
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  numcConfig.cmake
cmake/: BuildBLIS.cmake  BuildOpenBLAS.cmake  FindBLIS.cmake  numc.pc.in  numcConfig.cmake.in  toolchain-aarch64-sve.cmake  toolchain-aarch64-sve2.cmake  toolchain-aarch64.cmake  toolchain-riscv64.cmake
docs/: Doxyfile  ROADMAP.md
examples/: CMakeLists.txt  benchmark_add.c  benchmark_divide.c  benchmark_fill.c  benchmark_max.c  benchmark_min.c  benchmark_multiply.c  benchmark_reductions.c  benchmark_scalar.c  benchmark_subtract.c  benchmark_sum.c  comprehensive_benchmark.c  demo.c  helpers.h  numpy_benchmark.py  simd_benchmark.c
examples/core/: demo_creation.c  demo_error.c  demo_properties.c  demo_shape.c
examples/elemwise/: demo_abs.c  demo_binary.c  demo_broadcast.c  demo_clip.c  demo_exp.c  demo_log.c  demo_maximum_minimum.c  demo_neg.c  demo_scalar.c
examples/matmul/: demo_matmul.c
examples/nn/: kmeans.c  linear_regression.c  mnist.c
examples/reduction/: demo_argmax_argmin.c  demo_dot.c  demo_max_min.c  demo_mean.c  demo_sum.c
include/: alloc.h  array.h  arrio.h  create.h  dtype.h  error.h  io.h  memory.h  numc.h  numc_error.h  shape.h  types.h
src/: CMakeLists.txt  alloc.c  arch_dispatch.h  arena.h  array.c  array_core.c  array_print.c  array_shape.c  arrio.c  create.c  error.c  helpers.h  internal.h  io.c  math.c  math_elemwise.c  math_helpers.h  memory.c  numc_error.c  omp.h  shape.c  types.c  utils.c
src/arch/: avx2.c  avx2.h  sse2.h
src/array/: array_core.c  array_print.c
src/elemwise/: arithmetic.c  binary.c  clip.c  compare.c  dispatch.h  helpers.h  kernel.h  pow.c  select.c  unary.c  unary_activation.c  unary_dispatch.h
src/intrinsics/: asm_compat.inc  compare_avx2.h  compare_avx512.h  compare_neon.h  compare_rvv.h  compare_scalar_avx2.h  compare_scalar_avx512.h  compare_scalar_neon.h  compare_scalar_rvv.h  compare_scalar_sve.h  compare_sve.h  dot_avx2.h  dot_avx512.h  dot_neon.h  dot_rvv.h  dot_sve.h  dot_sve2.h  elemwise_avx2.h  elemwise_avx512.h  elemwise_neon.h  elemwise_rvv.h  elemwise_scalar_avx2.h  elemwise_scalar_avx512.h  elemwise_scalar_neon.h  elemwise_scalar_rvv.h  elemwise_scalar_sve.h  elemwise_sve.h  gemm_avx2.h  gemm_avx512.h  gemm_neon.h  gemm_rvv.h  gemm_sve.h  gemm_ukernel_f32_6x16_avx2.S  gemm_ukernel_f64_6x8_avx2.S  gemm_ukernel_i16_6x32_avx2.S  gemm_ukernel_i32_6x16_avx2.S  gemm_ukernel_i8_6x16_avx2.S  gemm_ukernel_u16_6x32_avx2.S  gemm_ukernel_u32_6x16_avx2.S  gemm_ukernel_u8_6x16_avx2.S  (+15 more)
src/math/: binary.c  kernel.h  math_elemwise.c  math_helper.h  unary.c
src/math/aarch/: simd_constants.h  simd_util.h
src/math/aarch/avx/f32/: math_elemwise.c  math_elemwise.h
src/matmul/: blas.c  dispatch.h  kernel.h  matmul.c
src/memory/: numc_alloc.c
src/random/: kernel.h  random.c
src/reduction/: argmax.c  argmin.c  blis_kernels.h  dispatch.h  dot.c  fused.h  helpers.h  kernel.h  max.c  mean.c  min.c  reduction.c  sum.c
src/reduction/intrinsics/: dot_avx2.h  gemm_avx2.h
tests/: CMakeLists.txt  helpers.h  lsan_suppressions.txt  test_array_add.c  test_array_concat.c  test_array_copy.c  test_array_core.c  test_array_create.c  test_array_fill.c  test_array_reshape.c  test_array_slice.c  test_array_transpose.c  test_dtype.c  test_memory_alignment.c
tests/core/: test_checkpoint.c  test_concat.c  test_contiguous.c  test_copy.c  test_create.c  test_ctx.c  test_error.c  test_fill.c  test_one_hot.c  test_print.c  test_properties.c  test_reshape.c  test_slice.c  test_transpose.c  test_write.c  test_zeros.c
tests/elemwise/: test_abs.c  test_add.c  test_broadcast.c  test_clip.c  test_comparison.c  test_div.c  test_exp.c  test_fma.c  test_log.c  test_mul.c  test_neg.c  test_pow.c  test_scalar.c  test_sigmoid.c  test_sqrt.c  test_sub.c  test_tanh.c  test_where.c
tests/matmul/: test_matmul.c  test_matmul_naive.c
tests/random/: test_rand.c  test_randn.c  test_random_he.c  test_random_init.c  test_random_xavier.c
tests/reduction/: test_argmax.c  test_argmin.c  test_dot.c  test_dot_nd.c  test_max.c  test_mean.c  test_min.c  test_sum.c
tests/unit/: test_add.c  test_allclose.c  test_arange.c  test_astype.c  test_axis_reduce.c  test_concat.c  test_copy.c  test_core.c  test_create.c  test_dtype.c  test_equal.c  test_fill.c  test_flatten.c  test_linspace.c  test_mean.c  test_memory.c  test_numc_type.c  test_prod.c  test_reduce.c  test_reshape.c  test_scalar.c  test_slice.c  test_std.c  test_transpose.c
(+53 files in other folders)
